[package]
name = "social-spammers-detection"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
google-youtube3 = "5.0.2+20230110"
hyper = { version = "0.14", features = ["full"] }
hyper-rustls = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-normalization = "0.1"